trunk/Archive/b7d19737e262c9da2da9b6d58c3801cc-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:7:53: error: ‘printf’ was not declared in this scope
        printf("Por favor informe o numero %d:\n",i+1);
                                                     ^
main.cpp:8:26: error: ‘scanf’ was not declared in this scope
        scanf("%d",&num[i]);
                          ^
main.cpp:20:28: error: ‘printf’ was not declared in this scope
 printf("vetor organizado\n");
                            ^
